<resources>
  <string name="app_name">ThatCatApp</string>
  <string name="title_home">Vote</string>
  <string name="title_browse">Browse</string>
  <string name="title_favorite">Favorite</string>
  <string name="title_breeds">Breeds</string>
  <string name="love_cat_btn">Love Cat</string>
  <string name="dislike_cat_btn">Dislike Cat</string>
  <string name="cat_text">Cat</string>
  <string name="title_filters">Filters</string>
  <string name="radio_order">Order</string>
  <string name="radio_ascending">Ascending</string>
  <string name="radio_descending">Descending</string>
  <string name="radio_random">Random</string>
  <string name="search_input_limit">Limit</string>
  <string name="cat_vote_next">Next Cat</string>
  <string name="favorite_cat">Favorite Cat</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
