<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>

  </data>
  <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/voteRootConstraintLayout"
      tools:context=".screens.fragment.vote.CatVoteFragment">

      <ImageView
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.80"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintTop_toBottomOf="@id/voteImgGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/votingGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cat_text"
        tools:src="@tools:sample/avatars"
        android:id="@+id/voteCatImg"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/voteLikeCatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/votingGuideline"
        android:text="@string/love_cat_btn"
        app:layout_constraintEnd_toStartOf="@id/voteDislikeCatBtn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"/>

      <com.google.android.material.button.MaterialButton
        android:id="@+id/voteDislikeCatBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dislike_cat_btn"
        app:layout_constraintBottom_toBottomOf="@id/voteLikeCatBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/voteLikeCatBtn"/>

      <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cat_vote_next"
        android:id="@+id/voteNextCatBtn"
        app:layout_constraintStart_toStartOf="@id/voteLikeCatBtn"
        app:layout_constraintTop_toBottomOf="@id/voteLikeCatBtn"
        app:layout_constraintEnd_toEndOf="@id/voteDislikeCatBtn"/>

      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/votingGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>
      <androidx.constraintlayout.widget.Guideline
        android:id="@+id/voteImgGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>